[package]
name = "grp_explorer_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
eframe = "0.19.0"
egui = "0.19.0"
id_tree = "1.8.0"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rfd = "0.10.0"
strum_macros = "0.24"
font-loader = "0.11.0"
flate2 = { version = "1.0.24", default-features = false, features = ["zlib"] }
chrono = "0.4.22"
glam = "0.21.3"
bitflags = "1.3.2"
xml-rs = "0.8.4"
image = "0.24.4"
squish = "1.0.0"

[dependencies.strum]
version = "0.24.1"
features = ["derive"]
