[package]
name = "grp_explorer_rust"
version = "0.1.0"
edition = "2021"

[build-dependencies]
build-print = "0.1.1"

[dependencies]
byteorder = "1.4.3"
eframe = { version = "0.29.1", optional = true }
egui = "~0"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rfd = "0.10.0"
strum_macros = "0.24"
font-loader = "0.11.0"
flate2 = { version = "1.0.24", default-features = false, features = ["zlib"] }
chrono = "0.4.22"
glam = "0.21.3"
bitflags = "1.3.2"
xml-rs = "0.8.4"
image = "0.25.5"
clipboard = "0.5.0"
log4rs = "1.2.0"
log = "0.4.17"
egui-miniquad = { version = "0.15.0", optional = true }
miniquad = { version = "0.4.0", optional = true }
queues = "1.1.0"

[dependencies.strum]
version = "0.24.1"
features = ["derive"]

[features]
default = ["eframe"]
eframe = ["dep:eframe"]
miniquad = ["dep:egui-miniquad", "dep:miniquad"]
