[package]
name = "grp_explorer_rust"
version = "0.1.0"
edition = "2021"

[build-dependencies]
build-print = "0.1.1"
fs_extra = "1.3.0"

[dependencies]
byteorder = "1.4"
eframe = { version = "0.30", optional = true, features = ["persistence"] }
egui_extras = "0.30"
rfd = "0.15"
strum_macros = "0.24"
font-loader = "0.11"
flate2 = { version = "1.0", default-features = false, features = ["zlib"] }
chrono = "0.4"
glam = "0.29"
bitflags = "2.0"
xml-rs = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tga", "dds"] }
clipboard = "0.5"
log4rs = "1.2"
log = "0.4"
egui-miniquad = { version = "0.15.0", optional = true }
miniquad = { version = "0.4", optional = true }
queues = "1.1"
texpresso = "2.0"
platform-dirs = "0.3"
gltf = { version = "1.4", features = ["KHR_lights_punctual", "KHR_materials_specular", "KHR_materials_emissive_strength", "extras", "names"] }
gltf-json = { version = "1.4", features = ["KHR_lights_punctual"] }
byte-unit = "5.1"
enum-as-inner = "0.6"
clap = { version = "4.5", features = ["derive"] }
delaunator = "1.0"
rgeometry = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dependencies.strum]
version = "0.24"
features = ["derive"]

[features]
default = ["eframe"]
eframe = ["dep:eframe"]
miniquad = ["dep:egui-miniquad", "dep:miniquad"]
